--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ button {
     display: flex;
     background: rgb(139, 209, 149); 
     color: white;
-    height: 4rem;
+    height: 10rem;
     justify-content: center;
     align-items: center;
 }
@@ -33,22 +33,53 @@ button {
 /* form styling */
 
 #form-section {
-    height: 10%;
+    width: 100%;
+    height: 17%;
+    display: flex;
+    padding-top: 1rem;
+    flex-direction: column;
+    align-items: center;
+    background: rgb(209, 178, 139); 
+}
+
+#visible-form {
+    margin-top: -2rem;
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#new-book-form {
+    width: 30%;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    column-gap: 1rem;
+    row-gap: 0.1rem;
+    margin-top: 1rem;
+}
+
+#submit-btn {
+    margin-top: 0.5rem
 }
 
 .invisible{
     visibility: hidden;
  }
 
-/* card section styling */
+/* library styling */
 
 #library-section {
     display: grid;
-    padding-left: 3rem;;
+    padding: 2rem 3rem 1rem 3rem;
     justify-content: center;
     grid-template-columns: repeat(3, 1fr);
+    row-gap: 1rem;
+    column-gap: 1rem;
     width: 100%;
-    height: 80%;
+    height: 100%;
+    background: rgb(145, 139, 209); 
 }
 
 .card {
@@ -62,8 +93,9 @@ button {
     align-items: center;
     border: solid 2px black;
     border-radius: 10px;
-    background: rgb(255, 179, 144);
+    background: rgb(209, 142, 139);
     font-size: 1.2rem;
+    box-shadow: 0px 0px 3px 1px;
 }
 
 #title {
@@ -99,7 +131,7 @@ button {
 
 /* Responsive Design */
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 600px) {
     
     #library-section {
         display: grid;
