--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,10 @@
 button {
     padding: 10px;
     border-radius: 7px;
-    width: 80px;
+    width: 100px;
+    font-family: 'Montserrat', 'Arial', sans-serif;
+    font-size: 0.8rem;
+    box-shadow: 0px 0px 3px 2px rgb(92, 44, 44);
 }
 
 #page-wrapper{
@@ -22,51 +25,57 @@ button {
 /* header styling */
 
 #header-section {
+    position: sticky;
+    top: 0;
     display: flex;
     background: rgb(139, 209, 149); 
     color: white;
-    height: 10rem;
+    height: 8rem;
     justify-content: center;
     align-items: center;
+    font-size: 1.5rem;
 }
 
 /* form styling */
 
 #form-section {
+    position: sticky;
+    top: 8rem;
     width: 100%;
-    height: 17%;
-    display: flex;
+    padding-bottom: 1rem;
     padding-top: 1rem;
+    display: flex;
     flex-direction: column;
     align-items: center;
     background: rgb(209, 178, 139); 
 }
 
 #visible-form {
-    margin-top: -2rem;
-    width: 30%;
+    position: absolute;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background: rgba(0, 0, 0, 0.76);
+    color:rgb(139, 209, 149); 
+    padding-bottom: 1rem;
+    margin-top: -1rem;
 }
 
 #new-book-form {
-    width: 30%;
+    width: 15%;
     display: grid;
     grid-template-columns: repeat(2,1fr);
-    column-gap: 1rem;
+    column-gap: 0.5rem;
     row-gap: 0.1rem;
-    margin-top: 1rem;
+    padding-top: 2rem;
+    padding-bottom: 1rem;
 }
-
-#submit-btn {
-    margin-top: 0.5rem
-}
-
 .invisible{
     visibility: hidden;
  }
+
 
 /* library styling */
 
@@ -128,6 +137,12 @@ button {
 .toggle-read-btn {
     margin-top: 5px;
 } 
+
+.darkened {
+    background: black;
+    background-color: rgba(0, 0, 0, 0.836);
+    background-blend-mode: multiply;
+ }
 
 /* Responsive Design */
 
